# QuickOpenGL

./: .gitattributes  .gitignore  CMakeLists.txt  QuickOpenGL.cpp  README.md  camera.hpp  config.h  engine  framebuffer.hpp  gltf_scene.hpp  gltf_test.hpp  light.hpp  material.hpp  shader.frag  shader.hpp  shader.vert  shape.hpp  simple.frag  simple.vert  simple_with_texture.frag  skybox.hpp  texture.hpp  utils.hpp
glad/include/glad/: glad.h
glad/src/: glad.c
resource/: fantasy_game_inn.glb  my.glb
resource/my/: my.gltf
resource/my2/: untitled.gltf
